feat: endpoint to change passwords, only for admin role
